Changes for 4.2.3rc1

New features:
...G...PS. [ZBXNEXT-5179] added option to specify absolute path in LoadModule; thanks to Glebs Ivanovskis for the patch (asestakovs)

Bug fixes:
A.F....... [ZBX-15049] fixed to host group limited global scripts to be usable in sub group (talbergs)
.......PST [ZBX-16138] fixed return value type and added preprocessing steps for items in remote internal checks tamplates; fixed unsigned write cache value for remote internal checks (viktors)
.......PS. [ZBX-15942] changed proxy to send timestamps of empty historical values to server, so throttled items are not listed in administration/queue (wiper)
.......PS. [ZBX-15963] fixed HTTP agent support of non-HTTP scheme in URL field (asestakovs)
.......PS. [ZBX-16151] fixed theoretical possibility of large numbers in json data being truncated, added boolean value support to json parser (wiper)
..F....... [ZBX-15778] fixed wrong filtering by "Age less than" and "Show suppressed problems" in trigger overview (vasilijs)
........S. [ZBX-16150] fixed inactive, unmounted, unaccessible VMware datastore causes unknown column nan insertion in field list (akozlovs)
A......... [ZBX-16122] fixed api validation of trigger dependency (averza)

--------------------------------------------------------------------------------
Changes for 4.2.2

4.2.2rc1 was released as 4.2.2 without any changes

--------------------------------------------------------------------------------
Changes for 4.2.2rc1

New features:
..F....... [ZBX-16069] upgraded jQuery version v1.10.2 -> v3.3.1 and jQueryUI v1.10.3 -> v1.12.1 (talbergs)

Bug fixes:
..F....... [ZBX-16032] changed application filtering to partial name search (vmurzins)
...G...... [ZBX-15915] fixed linking error if round() is undefined (akozlovs)
....I..... [ZBX-16074] added file revision number generation for compilation on MS Windows (MVekslers)
..F....... [ZBX-15833] fixed scrollbar in overlay popups (ashubin)