@@ -34,18 +34,11 @@ if (!zbx_ctype_digit($severity_min)) {
 }
 $map_data = CMapHelper::get(getRequest('sysmapid'), ['severity_min' => $severity_min]);
 
-if (getRequest('used_in_widget', 0) && hasRequest('uniqueid')) {
-	$uniqueid = getRequest('uniqueid');
-
+if (hasRequest('uniqueid')) {
 	// Rewrite actions to force Submaps be opened in same widget, instead of separate window.
 	foreach ($map_data['elements'] as &$element) {
 		$actions = CJs::decodeJson($element['actions']);
-		if ($actions && array_key_exists('gotos', $actions) && array_key_exists('submap', $actions['gotos'])) {
-			$actions['navigatetos']['submap'] = $actions['gotos']['submap'];
-			$actions['navigatetos']['submap']['widget_uniqueid'] = $uniqueid;
-			unset($actions['gotos']['submap']);
-		}
-
+		$actions['data']['widget_uniqueid'] = getRequest('uniqueid');
 		$element['actions'] = CJs::encodeJson($actions);
 	}
 	unset($element);
